@@ -19,19 +19,23 @@
  */
 package org.openremote.manager.rules;
 
+import io.micrometer.core.instrument.MeterRegistry;
+import io.micrometer.core.instrument.binder.jvm.ExecutorServiceMetrics;
 import org.apache.camel.builder.RouteBuilder;
+import org.openremote.container.concurrent.ContainerScheduledExecutor;
 import org.openremote.container.message.MessageBrokerService;
 import org.openremote.container.persistence.PersistenceService;
 import org.openremote.container.timer.TimerService;
 import org.openremote.manager.asset.AssetProcessingException;
 import org.openremote.manager.asset.AssetProcessingService;
 import org.openremote.manager.asset.AssetStorageService;
-import org.openremote.manager.asset.AssetUpdateProcessor;
 import org.openremote.manager.datapoint.AssetDatapointService;
 import org.openremote.manager.datapoint.AssetPredictedDatapointService;
+import org.openremote.manager.event.AttributeEventInterceptor;
 import org.openremote.manager.event.ClientEventService;
 import org.openremote.manager.gateway.GatewayService;
 import org.openremote.manager.notification.NotificationService;
+import org.openremote.manager.alarm.AlarmService;
 import org.openremote.manager.rules.flow.FlowResourceImpl;
 import org.openremote.manager.rules.geofence.GeofenceAssetAdapter;
 import org.openremote.manager.security.ManagerIdentityService;
@@ -43,7 +47,8 @@ import org.openremote.model.ContainerService;
 import org.openremote.model.PersistenceEvent;
 import org.openremote.model.asset.Asset;
 import org.openremote.model.attribute.Attribute;
-import org.openremote.model.attribute.AttributeEvent.Source;
+import org.openremote.model.attribute.AttributeEvent;
+import org.openremote.model.attribute.AttributeInfo;
 import org.openremote.model.attribute.AttributeMap;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.query.RulesetQuery;
@@ -58,7 +63,6 @@ import org.openremote.model.util.TimeUtil;
 import org.openremote.model.value.MetaHolder;
 import org.openremote.model.value.MetaItemType;
 
-import javax.persistence.EntityManager;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -69,8 +73,6 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.logging.Level.SEVERE;
-import static org.openremote.container.concurrent.GlobalLock.withLock;
-import static org.openremote.container.concurrent.GlobalLock.withLockReturning;
 import static org.openremote.container.persistence.PersistenceService.PERSISTENCE_TOPIC;
 import static org.openremote.container.persistence.PersistenceService.isPersistenceEventForEntityType;
 import static org.openremote.container.util.MapAccess.getInteger;
@@ -81,12 +83,12 @@ import static org.openremote.manager.gateway.GatewayService.isNotForGateway;
  * Manages {@link RulesEngine}s for stored {@link Ruleset}s and processes asset attribute updates.
  * <p>
  * If an updated attribute doesn't have meta {@link MetaItemType#RULE_STATE} is false and the attribute has an {@link
- * org.openremote.model.asset.agent.AgentLink} meta, this implementation of {@link AssetUpdateProcessor} converts the
- * update message to an {@link AssetState} fact. This service keeps the facts and thus the state of rule facts are in
- * sync with the asset state changes that occur. If an asset attribute value changes, the {@link AssetState} in the
+ * org.openremote.model.asset.agent.AgentLink} meta, this implementation of {@link AttributeEventInterceptor} converts the
+ * update message to an {@link AttributeInfo} fact. This service keeps the facts and thus the state of rule facts are in
+ * sync with the asset state changes that occur. If an asset attribute value changes, the {@link AttributeInfo} in the
  * rules engines will be updated to reflect the change.
  * <p>
- * If an updated attribute's {@link MetaItemType#RULE_EVENT} is true, another temporary {@link AssetState} fact is
+ * If an updated attribute's {@link MetaItemType#RULE_EVENT} is true, another temporary {@link AttributeInfo} fact is
  * inserted in the rules engines in scope. This fact expires automatically if the lifetime set in {@link
  * RulesService#OR_RULE_EVENT_EXPIRES} is reached, or if the lifetime set in the attribute {@link
  * MetaItemType#RULE_EVENT_EXPIRES} is reached.
@@ -99,7 +101,7 @@ import static org.openremote.manager.gateway.GatewayService.isNotForGateway;
  * </ol>
  * Processing order of rulesets with the same scope or same parent is not guaranteed.
  */
-public class RulesService extends RouteBuilder implements ContainerService, AssetUpdateProcessor {
+public class RulesService extends RouteBuilder implements ContainerService {
 
     public static final int PRIORITY = LOW_PRIORITY;
     public static final String OR_RULE_EVENT_EXPIRES = "OR_RULE_EVENT_EXPIRES";
@@ -116,8 +118,8 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     public static final String OR_RULES_QUICK_FIRE_MILLIS = "OR_RULES_QUICK_FIRE_MILLIS";
     public static final int OR_RULES_QUICK_FIRE_MILLIS_DEFAULT = 3000;
     private static final Logger LOG = Logger.getLogger(RulesService.class.getName());
-    protected final ConcurrentMap<String, RulesEngine<RealmRuleset>> realmEngines = new ConcurrentHashMap<>();
-    protected final ConcurrentMap<String, RulesEngine<AssetRuleset>> assetEngines = new ConcurrentHashMap<>();
+    protected final Map<String, RulesEngine<RealmRuleset>> realmEngines = new ConcurrentHashMap<>();
+    protected final Map<String, RulesEngine<AssetRuleset>> assetEngines = new ConcurrentHashMap<>();
     protected List<GeofenceAssetAdapter> geofenceAssetAdapters = new ArrayList<>();
     protected TimerService timerService;
     protected ScheduledExecutorService executorService;
@@ -127,6 +129,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     protected AssetStorageService assetStorageService;
     protected NotificationService notificationService;
     protected WebhookService webhookService;
+    protected AlarmService alarmService;
     protected AssetProcessingService assetProcessingService;
     protected AssetDatapointService assetDatapointService;
     protected AssetPredictedDatapointService assetPredictedDatapointService;
@@ -135,18 +138,19 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     protected RulesEngine<GlobalRuleset> globalEngine;
     protected Realm[] realms;
     protected AssetLocationPredicateProcessor locationPredicateRulesConsumer;
-    protected ConcurrentMap<RulesEngine<?>, List<RulesEngine.AssetStateLocationPredicates>> engineAssetLocationPredicateMap = new ConcurrentHashMap<>();
+    protected final ConcurrentMap<RulesEngine<?>, List<RulesEngine.AssetLocationPredicates>> engineAssetLocationPredicateMap = new ConcurrentHashMap<>();
     protected final Set<String> assetsWithModifiedLocationPredicates = new HashSet<>();
     // Keep global list of asset states that have been pushed to any engines
     // The objects are already in memory inside the rule engines but keeping them
     // here means we can quickly insert facts into newly started engines
-    protected final Set<AssetState<?>> assetStates = new HashSet<>();
-    protected final Set<AssetState<?>> preInitAssetStates = new HashSet<>();
+    protected final Set<AttributeEvent> attributeEvents = new HashSet<>();
+    protected final Set<AttributeEvent> preInitAttributeEvents = new HashSet<>();
     protected long defaultEventExpiresMillis = 1000*60*60;
     protected long tempFactExpirationMillis;
     protected long quickFireMillis;
     protected boolean initDone;
     protected boolean startDone;
+    protected MeterRegistry meterRegistry;
 
     @Override
     public int getPriority() {
@@ -155,13 +159,14 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
     @Override
     public void init(Container container) throws Exception {
-        executorService = container.getExecutorService();
+        executorService = new ContainerScheduledExecutor(getClass().getSimpleName(), 1);
         timerService = container.getService(TimerService.class);
         persistenceService = container.getService(PersistenceService.class);
         rulesetStorageService = container.getService(RulesetStorageService.class);
         identityService = container.getService(ManagerIdentityService.class);
         notificationService = container.getService(NotificationService.class);
         webhookService = container.getService(WebhookService.class);
+        alarmService = container.getService(AlarmService.class);
         assetStorageService = container.getService(AssetStorageService.class);
         assetProcessingService = container.getService(AssetProcessingService.class);
         assetDatapointService = container.getService(AssetDatapointService.class);
@@ -174,6 +179,12 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
         if (initDone) {
             return;
+        }
+
+        meterRegistry = container.getMeterRegistry();
+
+        if (meterRegistry != null) {
+            executorService = ExecutorServiceMetrics.monitor(meterRegistry, executorService, getClass().getSimpleName());
         }
 
         clientEventService.addSubscriptionAuthorizer((realm, auth, subscription) -> {
@@ -200,6 +211,8 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
             return false;
         });
+
+        clientEventService.addInternalSubscription(AttributeEvent.class, null, this::onAttributeEvent);
 
         ServiceLoader.load(GeofenceAssetAdapter.class).forEach(geofenceAssetAdapter -> {
             LOG.fine("Adding GeofenceAssetAdapter: " + geofenceAssetAdapter.getClass().getName());
@@ -234,7 +247,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     public void configure() throws Exception {
         // If any ruleset was modified in the database then check its' status and undeploy, deploy, or update it
         from(PERSISTENCE_TOPIC)
-            .routeId("RulesetPersistenceChanges")
+            .routeId("Persistence-Ruleset")
             .filter(isPersistenceEventForEntityType(Ruleset.class))
             .filter(isNotForGateway(gatewayService))
             .process(exchange -> {
@@ -242,10 +255,10 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                 processRulesetChange((Ruleset) persistenceEvent.getEntity(), persistenceEvent.getCause());
             });
 
-        // If any realm was modified in the database then check its' status and undeploy, deploy or update any
+        // If any realm was modified in the database then check its status and undeploy, deploy or update any
         // associated rulesets
         from(PERSISTENCE_TOPIC)
-            .routeId("RuleEngineRealmChanges")
+            .routeId("Persistence-RulesRealm")
             .filter(isPersistenceEventForEntityType(Realm.class))
             .filter(isNotForGateway(gatewayService))
             .process(exchange -> {
@@ -256,7 +269,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
         // If any asset was modified in the database, detect changed attributes
         from(PERSISTENCE_TOPIC)
-            .routeId("RuleEngineAssetChanges")
+            .routeId("Persistence-RulesAsset")
             .filter(isPersistenceEventForEntityType(Asset.class))
             .process(exchange -> {
                 PersistenceEvent<Asset<?>> persistenceEvent = (PersistenceEvent<Asset<?>>) exchange.getIn().getBody(PersistenceEvent.class);
@@ -318,8 +331,15 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
             .forEach(pair -> {
                 Asset<?> asset = pair.key;
                 pair.value.forEach(ruleAttribute -> {
-                    AssetState<?> assetState = new AssetState<>(asset, ruleAttribute, Source.INTERNAL);
-                    updateAssetState(assetState);
+                    AttributeEvent attributeEvent = new AttributeEvent(
+                        asset,
+                        ruleAttribute,
+                        null,
+                        ruleAttribute.getValue().orElse(null),
+                        ruleAttribute.getTimestamp().orElse(0L),
+                        ruleAttribute.getValue().orElse(null),
+                        ruleAttribute.getTimestamp().orElse(0L));
+                    updateAttributeEvent(attributeEvent);
                 });
             });
 
@@ -330,37 +350,37 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
         realmEngines.values().forEach(RulesEngine::start);
         assetEngines.values().forEach(RulesEngine::start);
 
-        startDone = true;
+        synchronized (preInitAttributeEvents) {
+            startDone = true;
+        }
 
-        preInitAssetStates.forEach(this::doProcessAssetUpdate);
-        preInitAssetStates.clear();
+        preInitAttributeEvents.forEach(this::doProcessAttributeUpdate);
+        preInitAttributeEvents.clear();
     }
 
     @Override
     public void stop(Container container) throws Exception {
-        withLock(getClass().getSimpleName() + "::stop", () -> {
-            for (GeofenceAssetAdapter geofenceAssetAdapter : geofenceAssetAdapters) {
-                try {
-                    geofenceAssetAdapter.stop(container);
-                } catch (Exception e) {
-                    LOG.log(SEVERE, "Exception thrown whilst stopping geofence adapter", e);
-                }
+        for (GeofenceAssetAdapter geofenceAssetAdapter : geofenceAssetAdapters) {
+            try {
+                geofenceAssetAdapter.stop(container);
+            } catch (Exception e) {
+                LOG.log(SEVERE, "Exception thrown whilst stopping geofence adapter", e);
             }
+        }
 
-            assetEngines.forEach((assetId, rulesEngine) -> rulesEngine.stop(true));
-            assetEngines.clear();
-            realmEngines.forEach((realm, rulesEngine) -> rulesEngine.stop(true));
-            realmEngines.clear();
+        assetEngines.forEach((assetId, rulesEngine) -> rulesEngine.stop());
+        assetEngines.clear();
+        realmEngines.forEach((realm, rulesEngine) -> rulesEngine.stop());
+        realmEngines.clear();
 
-            if (globalEngine != null) {
-                globalEngine.stop(true);
-                globalEngine = null;
-            }
+        if (globalEngine != null) {
+            globalEngine.stop();
+            globalEngine = null;
+        }
 
-            synchronized (assetStates) {
-                assetStates.clear();
-            }
-        });
+        synchronized (attributeEvents) {
+            attributeEvents.clear();
+        }
 
         for (GeofenceAssetAdapter geofenceAssetAdapter : geofenceAssetAdapters) {
             geofenceAssetAdapter.stop(container);
@@ -376,64 +396,61 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
             .orElse(metaHolder.getMeta().has(MetaItemType.AGENT_LINK));
     }
 
-    @Override
-    public boolean processAssetUpdate(EntityManager em,
-                                      Asset<?> asset,
-                                      Attribute<?> attribute,
-                                      Source source) throws AssetProcessingException {
-        if (!startDone) {
-            preInitAssetStates.add(new AssetState<>(asset, attribute, source));
-        } else {
-            doProcessAssetUpdate(new AssetState<>(asset, attribute, source));
+    /**
+     * React to events that have been committed to the DB and inject them into the appropriate {@link RulesEngine}s.
+     */
+    public void onAttributeEvent(AttributeEvent event) throws AssetProcessingException {
+        synchronized (preInitAttributeEvents) {
+            if (!startDone) {
+                preInitAttributeEvents.add(event);
+            } else {
+                doProcessAttributeUpdate(event);
+            }
         }
-
-        return false;
     }
 
-    protected void doProcessAssetUpdate(AssetState<?> assetState) {
+    protected void doProcessAttributeUpdate(AttributeEvent attributeEvent) {
         // We might process two facts for a single attribute update, if that is what the user wants
 
-        // First as asset state
-        if (isRuleState(assetState)) {
-            updateAssetState(assetState);
+        // First as attribute event
+        retractAttributeEvent(attributeEvent);
+        if (isRuleState(attributeEvent) && !attributeEvent.isDeleted()) {
+            updateAttributeEvent(attributeEvent);
         }
 
-        // Then as asset event (if there wasn't an error), this will also fire the rules engines
-        if (assetState.getMetaValue(MetaItemType.RULE_EVENT).orElse(false)) {
+        // Then as rule event
+        removeAttributeEvents(attributeEvent);
+        if (attributeEvent.getMetaValue(MetaItemType.RULE_EVENT).orElse(false)) {
+            if (!attributeEvent.isDeleted()) {
+                long expireMillis = attributeEvent.getMetaValue(MetaItemType.RULE_EVENT_EXPIRES).map(expires -> {
+                    long expMillis = defaultEventExpiresMillis;
 
-            long expireMillis = assetState.getMetaValue(MetaItemType.RULE_EVENT_EXPIRES).map(expires -> {
-                long expMillis = defaultEventExpiresMillis;
+                    try {
+                        expMillis = TimeUtil.parseTimeDuration(expires);
+                    } catch (RuntimeException exception) {
+                        LOG.log(Level.WARNING, "Failed to parse '" + MetaItemType.RULE_EVENT_EXPIRES.getName() + "' value '" + expires + "' for attribute: " + attributeEvent, exception);
+                    }
+                    return expMillis;
+                }).orElse(defaultEventExpiresMillis);
 
-                try {
-                    expMillis = TimeUtil.parseTimeDuration(expires);
-                } catch (RuntimeException exception) {
-                    LOG.log(Level.WARNING, "Failed to parse '" + MetaItemType.RULE_EVENT_EXPIRES.getName() + "' value '" + expires + "' for attribute: " + assetState, exception);
-                }
-                return expMillis;
-            }).orElse(defaultEventExpiresMillis);
-
-            insertAssetEvent(assetState, expireMillis);
+                insertAttributeEvent(attributeEvent, expireMillis);
+            }
         }
     }
 
     public boolean isRulesetKnown(Ruleset ruleset) {
         if (ruleset instanceof GlobalRuleset) {
             return globalEngine != null
-                && globalEngine.deployments != null
                 && globalEngine.deployments.containsKey(ruleset.getId())
                 && globalEngine.deployments.get(ruleset.getId()).ruleset.getRules().equals(ruleset.getRules());
         }
-        if (ruleset instanceof RealmRuleset) {
-            RealmRuleset realmRuleset = (RealmRuleset) ruleset;
+        if (ruleset instanceof RealmRuleset realmRuleset) {
             return realmEngines.get(realmRuleset.getRealm()) != null
-                && realmEngines.get(realmRuleset.getRealm()).deployments != null
                 && realmEngines.get(realmRuleset.getRealm()).deployments.containsKey(ruleset.getId())
                 && realmEngines.get(realmRuleset.getRealm()).deployments.get(ruleset.getId()).ruleset.getRules().equals(ruleset.getRules());
         }
-        if (ruleset instanceof AssetRuleset) {
-            AssetRuleset assetRuleset = (AssetRuleset) ruleset;
+        if (ruleset instanceof AssetRuleset assetRuleset) {
             return assetEngines.get(assetRuleset.getAssetId()) != null
-                && assetEngines.get(assetRuleset.getAssetId()).deployments != null
                 && assetEngines.get(assetRuleset.getAssetId()).deployments.containsKey(ruleset.getId())
                 && assetEngines.get(assetRuleset.getAssetId()).deployments.get(ruleset.getId()).ruleset.getRules().equals(ruleset.getRules());
         }
@@ -455,189 +472,170 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     }
 
     protected void processRealmChange(Realm realm, PersistenceEvent.Cause cause) {
-        withLock(getClass().getSimpleName() + "::processRealmChange", () -> {
-            // Check if enabled status has changed
-            boolean wasEnabled = Arrays.stream(realms).anyMatch(t -> realm.getName().equals(t.getName()) && realm.getId().equals(t.getId()));
-            boolean isEnabled = realm.getEnabled() && cause != PersistenceEvent.Cause.DELETE;
-            realms = Arrays.stream(identityService.getIdentityProvider().getRealms()).filter(Realm::getEnabled).toArray(Realm[]::new);
+        // Check if enabled status has changed
+        boolean wasEnabled = Arrays.stream(realms).anyMatch(t -> realm.getName().equals(t.getName()) && realm.getId().equals(t.getId()));
+        boolean isEnabled = realm.getEnabled() && cause != PersistenceEvent.Cause.DELETE;
+        realms = Arrays.stream(identityService.getIdentityProvider().getRealms()).filter(Realm::getEnabled).toArray(Realm[]::new);
 
-            if (wasEnabled == isEnabled) {
-                // Nothing to do here
-                return;
+        if (wasEnabled == isEnabled) {
+            // Nothing to do here
+            return;
+        }
+
+        if (wasEnabled) {
+            // Remove realm rules engine for this realm if it exists
+            RulesEngine<RealmRuleset> realmRulesEngine = realmEngines.get(realm.getName());
+            if (realmRulesEngine != null) {
+                realmRulesEngine.stop();
+                realmEngines.remove(realm.getName());
             }
 
-            if (wasEnabled) {
-                // Remove realm rules engine for this realm if it exists
-                RulesEngine<RealmRuleset> realmRulesEngine = realmEngines.get(realm.getName());
-                if (realmRulesEngine != null) {
-                    realmRulesEngine.stop();
-                    realmEngines.remove(realm.getName());
+            // Remove any asset rules engines for assets in this realm
+            assetEngines.values().removeIf(engine -> {
+                boolean remove = engine.getId().getRealm().map(r -> r.equals(realm.getName())).orElse(false);
+                if (remove) {
+                    engine.stop();
                 }
+                return remove;
+            });
+        } else {
+            // Create realm rules engines for this realm if it has any rulesets
+            rulesetStorageService
+                .findAll(
+                    RealmRuleset.class,
+                    new RulesetQuery()
+                        .setRealm(realm.getName())
+                        .setFullyPopulate(true)
+                        .setEnabledOnly(true))
+                .stream()
+                .map(this::deployRealmRuleset)
+                .filter(Objects::nonNull)
+                .forEach(RulesEngine::start);
 
-                // Remove any asset rules engines for assets in this realm
-                assetEngines.values().stream()
-                    .filter(re -> re.getId().getRealm().map(r -> r.equals(realm.getName())).orElse(false))
-                    .forEach(RulesEngine::stop);
-                assetEngines.entrySet().removeIf(entry ->
-                    entry.getValue().getId().getRealm().map(r -> r.equals(realm.getName())).orElse(
-                        false)
-                );
-
-            } else {
-                // Create realm rules engines for this realm if it has any rulesets
-                rulesetStorageService
-                    .findAll(
-                        RealmRuleset.class,
-                        new RulesetQuery()
-                            .setRealm(realm.getName())
-                            .setFullyPopulate(true)
-                            .setEnabledOnly(true))
-                    .stream()
-                    .map(this::deployRealmRuleset)
-                    .filter(Objects::nonNull)
-                    .forEach(RulesEngine::start);
-
-                // Create any asset rules engines for assets in this realm that have rulesets
-                deployAssetRulesets(
-                    rulesetStorageService.findAll(
-                        AssetRuleset.class,
-                        new RulesetQuery()
-                            .setRealm(realm.getName())
-                            .setEnabledOnly(true)
-                            .setFullyPopulate(true)))
-                    .forEach(RulesEngine::start);
-            }
-        });
+            // Create any asset rules engines for assets in this realm that have rulesets
+            deployAssetRulesets(
+                rulesetStorageService.findAll(
+                    AssetRuleset.class,
+                    new RulesetQuery()
+                        .setRealm(realm.getName())
+                        .setEnabledOnly(true)
+                        .setFullyPopulate(true)))
+                .forEach(RulesEngine::start);
+        }
     }
 
     protected void processAssetChange(Asset<?> asset, PersistenceEvent<Asset<?>> persistenceEvent) {
-        withLock(getClass().getSimpleName() + "::processAssetChange", () -> {
+        switch (persistenceEvent.getCause()) {
+            case DELETE ->
+                // Remove any asset rules engines for this asset
+                assetEngines.values().removeIf(re -> {
+                    if (re.getId().getAssetId().map(aId -> aId.equals(asset.getId())).orElse(false)) {
+                        re.stop();
+                        return true;
+                    }
+                    return false;
+                });
+            case UPDATE -> {
+                boolean attributesChanged = persistenceEvent.hasPropertyChanged("attributes");
 
-            switch (persistenceEvent.getCause()) {
-                case CREATE: {
-                    // Load rule state attributes into rules engine
-                    asset
-                        .getAttributes()
-                        .stream()
-                        .filter(RulesService::isRuleState)
-                        .forEach(attribute -> {
-                            AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                            LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + assetState);
-                            updateAssetState(assetState);
-                        });
-                    break;
+                // Attribute changes will be published to the client event bus - if anything else has changed then we need to reload
+                if (!attributesChanged) {
+
                 }
-                case UPDATE: {
+                AttributeMap oldAttributes = attributesChanged ? ((AttributeMap) persistenceEvent.getPreviousState("attributes")) : asset.getAttributes();
+                AttributeMap currentAttributes = asset.getAttributes();
 
-                    boolean attributesChanged = persistenceEvent.hasPropertyChanged("attributes");
-                    AttributeMap oldAttributes = attributesChanged ? ((AttributeMap) persistenceEvent.getPreviousState("attributes")) : asset.getAttributes();
-                    AttributeMap currentAttributes = asset.getAttributes();
+                List<Attribute<?>> oldStateAttributes = oldAttributes
+                    .stream()
+                    .filter(RulesService::isRuleState).toList();
 
-                    List<Attribute<?>> oldStateAttributes = oldAttributes
-                        .stream()
-                        .filter(RulesService::isRuleState).toList();
-
-                    List<Attribute<?>> newStateAttributes = currentAttributes
-                        .stream()
-                        .filter(RulesService::isRuleState).toList();
-
-                    // Just retract all old attributes rather than compare every value that might cause asset state to mutate
-                    oldStateAttributes.forEach(attribute -> {
-                        AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                        LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), retracting obsolete fact: " + assetState);
-                        retractAssetState(assetState);
-                    });
-
-                    // Insert new states for new or changed attributes
-                    newStateAttributes.forEach(attribute -> {
-                        AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                        LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + assetState);
-                        updateAssetState(assetState);
-                    });
-                    break;
-                }
-                case DELETE:
-                    // Retract any facts that were associated with this asset
-                    asset.getAttributes().stream()
-                        .filter(RulesService::isRuleState)
-                        .forEach(attribute -> {
-                            AssetState<?> assetState = new AssetState<>(asset, attribute, Source.INTERNAL);
-                            LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), retracting fact: " + assetState);
-                            retractAssetState(assetState);
-                        });
-                    break;
+                List<Attribute<?>> newStateAttributes = currentAttributes
+                    .stream()
+                    .filter(RulesService::isRuleState).toList();
+//
+//                // Just retract all old attributes rather than compare every value that might cause asset state to mutate
+//                oldStateAttributes.forEach(attribute -> {
+//                    AttributeEvent attributeEvent = new AttributeEvent(asset.getId(), attribute.getName(), null);
+//                    LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), retracting obsolete fact: " + attributeEvent);
+//                    retractAttributeEvent(attributeEvent);
+//                });
+//
+//                // Insert new states for new or changed attributes
+//                newStateAttributes.forEach(attribute -> {
+//                    AttributeEvent attributeEvent = new AttributeEvent(asset, attribute, null, attribute.getValue().orElse(null), attribute.getTimestamp().orElse(0L));
+//                    LOG.finest("Asset was persisted (" + persistenceEvent.getCause() + "), inserting fact: " + attributeEvent);
+//                    updateAttributeEvent(attributeEvent);
+//                });
             }
-        });
+        }
     }
 
-    protected void processRulesetChange(Ruleset ruleset, PersistenceEvent.Cause cause) {
-        withLock(getClass().getSimpleName() + "::processRulesetChange", () -> {
-            if (cause == PersistenceEvent.Cause.DELETE || !ruleset.isEnabled()) {
-                if (ruleset instanceof GlobalRuleset) {
-                    undeployGlobalRuleset((GlobalRuleset) ruleset);
-                } else if (ruleset instanceof RealmRuleset) {
-                    undeployRealmRuleset((RealmRuleset) ruleset);
-                } else if (ruleset instanceof AssetRuleset) {
-                    undeployAssetRuleset((AssetRuleset) ruleset);
-                }
-            } else {
-                if (ruleset instanceof GlobalRuleset) {
-
-                    boolean isNewEngine = globalEngine == null;
-                    RulesEngine<GlobalRuleset> engine = deployGlobalRuleset((GlobalRuleset) ruleset);
-
-                    if (isNewEngine) {
-                        synchronized (assetStates) {
-                            // Push all existing facts into the engine
-                            assetStates.forEach(assetState -> engine.updateOrInsertAssetState(assetState, true));
-                        }
-                    }
-
-                    engine.start();
-
-                } else if (ruleset instanceof RealmRuleset) {
-
-                    boolean isNewEngine = !realmEngines.containsKey(((RealmRuleset) ruleset).getRealm());
-                    RulesEngine<RealmRuleset> engine = deployRealmRuleset((RealmRuleset) ruleset);
-
-                    if (isNewEngine) {
-                        // Push all existing facts into the engine
-                        synchronized (assetStates) {
-                            assetStates.forEach(assetState -> {
-                                if (assetState.getRealm().equals(((RealmRuleset) ruleset).getRealm())) {
-                                    engine.updateOrInsertAssetState(assetState, true);
-                                }
-                            });
-                        }
-                    }
-
-                    engine.start();
-
-                } else if (ruleset instanceof AssetRuleset) {
-
-                    // Must reload from the database, the ruleset might not be completely hydrated on CREATE or UPDATE
-                    AssetRuleset assetRuleset = rulesetStorageService.find(AssetRuleset.class, ruleset.getId());
-                    boolean isNewEngine = !assetEngines.containsKey(((AssetRuleset) ruleset).getAssetId());
-                    RulesEngine<AssetRuleset> engine = deployAssetRuleset(assetRuleset);
-
-                    if (isNewEngine) {
-                        // Push all existing facts for this asset (and it's children into the engine)
-                        getAssetStatesInScope(((AssetRuleset) ruleset).getAssetId())
-                            .forEach(assetState -> engine.updateOrInsertAssetState(assetState, true));
-                    }
-
-                    engine.start();
-                }
+    protected synchronized void processRulesetChange(Ruleset ruleset, PersistenceEvent.Cause cause) {
+        if (cause == PersistenceEvent.Cause.DELETE || !ruleset.isEnabled()) {
+            if (ruleset instanceof GlobalRuleset) {
+                undeployGlobalRuleset((GlobalRuleset) ruleset);
+            } else if (ruleset instanceof RealmRuleset) {
+                undeployRealmRuleset((RealmRuleset) ruleset);
+            } else if (ruleset instanceof AssetRuleset) {
+                undeployAssetRuleset((AssetRuleset) ruleset);
             }
-        });
+        } else {
+            if (ruleset instanceof GlobalRuleset) {
+
+                boolean isNewEngine = globalEngine == null;
+                RulesEngine<GlobalRuleset> engine = deployGlobalRuleset((GlobalRuleset) ruleset);
+
+                if (isNewEngine) {
+                    synchronized (attributeEvents) {
+                        // Push all existing facts into the engine
+                        attributeEvents.forEach(assetState -> engine.updateOrInsertAttributeInfo(assetState, true));
+                    }
+                }
+
+                engine.start();
+
+            } else if (ruleset instanceof RealmRuleset) {
+
+                boolean isNewEngine = !realmEngines.containsKey(((RealmRuleset) ruleset).getRealm());
+                RulesEngine<RealmRuleset> engine = deployRealmRuleset((RealmRuleset) ruleset);
+
+                if (isNewEngine) {
+                    // Push all existing facts into the engine
+                    synchronized (attributeEvents) {
+                        attributeEvents.forEach(assetState -> {
+                            if (assetState.getRealm().equals(((RealmRuleset) ruleset).getRealm())) {
+                                engine.updateOrInsertAttributeInfo(assetState, true);
+                            }
+                        });
+                    }
+                }
+
+                engine.start();
+
+            } else if (ruleset instanceof AssetRuleset) {
+
+                // Must reload from the database, the ruleset might not be completely hydrated on CREATE or UPDATE
+                AssetRuleset assetRuleset = rulesetStorageService.find(AssetRuleset.class, ruleset.getId());
+                boolean isNewEngine = !assetEngines.containsKey(((AssetRuleset) ruleset).getAssetId());
+                RulesEngine<AssetRuleset> engine = deployAssetRuleset(assetRuleset);
+
+                if (isNewEngine) {
+                    // Push all existing facts for this asset (and it's children into the engine)
+                    getAssetStatesInScope(((AssetRuleset) ruleset).getAssetId())
+                        .forEach(assetState -> engine.updateOrInsertAttributeInfo(assetState, true));
+                }
+
+                engine.start();
+            }
+        }
     }
 
     /**
      * Deploy the ruleset into the global engine creating the engine if necessary.
      */
     protected RulesEngine<GlobalRuleset> deployGlobalRuleset(GlobalRuleset ruleset) {
-        return withLockReturning(getClass().getSimpleName() + "::deployGlobalRuleset", () -> {
 
+        synchronized (this) {
             // Global rules have access to everything in the system
             if (globalEngine == null) {
                 globalEngine = new RulesEngine<>(
@@ -649,38 +647,38 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                     assetProcessingService,
                     notificationService,
                     webhookService,
+                    alarmService,
                     clientEventService,
                     assetDatapointService,
                     assetPredictedDatapointService,
                     new RulesEngineId<>(),
-                    locationPredicateRulesConsumer
+                    locationPredicateRulesConsumer,
+                    meterRegistry
                 );
             }
+        }
 
-            globalEngine.addRuleset(ruleset);
+        globalEngine.addRuleset(ruleset);
 
-            return globalEngine;
-        });
+        return globalEngine;
     }
 
-    protected void undeployGlobalRuleset(GlobalRuleset ruleset) {
-        withLock(getClass().getSimpleName() + "::undeployGlobalRuleset", () -> {
-            if (globalEngine == null) {
-                return;
-            }
+    protected synchronized void undeployGlobalRuleset(GlobalRuleset ruleset) {
+        if (globalEngine == null) {
+            return;
+        }
 
-            if (globalEngine.removeRuleset(ruleset)) {
-                globalEngine.stop();
-                globalEngine = null;
-            }
-        });
+        if (globalEngine.removeRuleset(ruleset)) {
+            globalEngine = null;
+        }
     }
 
     protected RulesEngine<RealmRuleset> deployRealmRuleset(RealmRuleset ruleset) {
-        return withLockReturning(getClass().getSimpleName() + "::deployRealmRuleset", () -> {
+        RulesEngine<RealmRuleset> realmRulesEngine;
 
+        synchronized (this) {
             // Look for existing rules engines for this realm
-            RulesEngine<RealmRuleset> realmRulesEngine = realmEngines
+            realmRulesEngine = realmEngines
                 .computeIfAbsent(ruleset.getRealm(), (realm) ->
                     new RulesEngine<>(
                         timerService,
@@ -691,32 +689,30 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                         assetProcessingService,
                         notificationService,
                         webhookService,
+                        alarmService,
                         clientEventService,
                         assetDatapointService,
                         assetPredictedDatapointService,
                         new RulesEngineId<>(realm),
-                        locationPredicateRulesConsumer
+                        locationPredicateRulesConsumer,
+                        meterRegistry
                     ));
+        }
 
-            realmRulesEngine.addRuleset(ruleset);
+        realmRulesEngine.addRuleset(ruleset);
 
-            return realmRulesEngine;
-        });
+        return realmRulesEngine;
     }
 
-    protected void undeployRealmRuleset(RealmRuleset ruleset) {
-        withLock(getClass().getSimpleName() + "::undeployRealmRuleset", () -> {
+    protected synchronized void undeployRealmRuleset(RealmRuleset ruleset) {
+        RulesEngine<RealmRuleset> rulesEngine = realmEngines.get(ruleset.getRealm());
+        if (rulesEngine == null) {
+            return;
+        }
 
-            RulesEngine<RealmRuleset> rulesEngine = realmEngines.get(ruleset.getRealm());
-            if (rulesEngine == null) {
-                return;
-            }
-
-            if (rulesEngine.removeRuleset(ruleset)) {
-                rulesEngine.stop();
-                realmEngines.remove(ruleset.getRealm());
-            }
-        });
+        if (rulesEngine.removeRuleset(ruleset)) {
+            realmEngines.remove(ruleset.getRealm());
+        }
     }
 
     protected Stream<RulesEngine<AssetRuleset>> deployAssetRulesets(List<AssetRuleset> rulesets) {
@@ -732,16 +728,9 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
             .collect(Collectors.groupingBy(assetAndRules -> assetAndRules.key.getRealm()))
             .entrySet()
             .stream()
-            .filter(es -> {
-                try {
-                    return Arrays
-                        .stream(realms)
-                        .anyMatch(at -> es.getKey().equals(at.getName()));
-                } catch (Exception e) {
-                    e.printStackTrace();
-                    return false;
-                }
-            })
+            .filter(es -> Arrays
+                .stream(realms)
+                .anyMatch(at -> es.getKey().equals(at.getName())))
             .flatMap(es -> {
                 List<Pair<Asset<?>, List<AssetRuleset>>> realmAssetAndRules = es.getValue();
 
@@ -755,10 +744,11 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
     }
 
     protected RulesEngine<AssetRuleset> deployAssetRuleset(AssetRuleset ruleset) {
-        return withLockReturning(getClass().getSimpleName() + "::deployAssetRuleset", () -> {
+        RulesEngine<AssetRuleset> assetRulesEngine;
 
+        synchronized (this) {
             // Look for existing rules engine for this asset
-            RulesEngine<AssetRuleset> assetRulesEngine = assetEngines
+            assetRulesEngine = assetEngines
                 .computeIfAbsent(ruleset.getAssetId(), (assetId) ->
                     new RulesEngine<>(
                         timerService,
@@ -769,79 +759,95 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                         assetProcessingService,
                         notificationService,
                         webhookService,
+                        alarmService,
                         clientEventService,
                         assetDatapointService,
                         assetPredictedDatapointService,
                         new RulesEngineId<>(ruleset.getRealm(), assetId),
-                        locationPredicateRulesConsumer
+                        locationPredicateRulesConsumer,
+                        meterRegistry
                     ));
+        }
 
-            assetRulesEngine.addRuleset(ruleset);
-
-            return assetRulesEngine;
-        });
+        assetRulesEngine.addRuleset(ruleset);
+        return assetRulesEngine;
     }
 
-    protected void undeployAssetRuleset(AssetRuleset ruleset) {
-        withLock(getClass().getSimpleName() + "::undeployAssetRuleset", () -> {
-            RulesEngine<AssetRuleset> rulesEngine = assetEngines.get(ruleset.getAssetId());
-            if (rulesEngine == null) {
-                return;
-            }
+    protected synchronized void undeployAssetRuleset(AssetRuleset ruleset) {
+        RulesEngine<AssetRuleset> rulesEngine = assetEngines.get(ruleset.getAssetId());
+        if (rulesEngine == null) {
+            return;
+        }
 
-            if (rulesEngine.removeRuleset(ruleset)) {
-                rulesEngine.stop();
-                assetEngines.remove(ruleset.getAssetId());
-            }
-        });
+        if (rulesEngine.removeRuleset(ruleset)) {
+            assetEngines.remove(ruleset.getAssetId());
+        }
     }
 
-    protected void insertAssetEvent(AssetState<?> assetState, long expiresMillis) {
+    protected void insertAttributeEvent(AttributeInfo event, long expiresMillis) {
         // Get the chain of rule engines that we need to pass through
-        List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
+        List<RulesEngine<?>> rulesEngines = getEnginesInScope(event.getRealm(), event.getPath());
 
         // Pass through each engine
         for (RulesEngine<?> rulesEngine : rulesEngines) {
-            rulesEngine.insertAssetEvent(expiresMillis, assetState);
+            rulesEngine.insertAttributeEvent(expiresMillis, event);
         }
     }
 
-    protected void updateAssetState(AssetState<?> assetState) {
-        LOG.finest("Updating asset state: " + assetState);
-
+    protected void removeAttributeEvents(AttributeInfo event) {
         // Get the chain of rule engines that we need to pass through
-        List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
+        List<RulesEngine<?>> rulesEngines = getEnginesInScope(event.getRealm(), event.getPath());
 
-        synchronized (assetStates) {
+        // Remove all from each engine
+        for (RulesEngine<?> rulesEngine : rulesEngines) {
+            rulesEngine.removeAttributeEvents(event.getRef());
+        }
+    }
+
+    protected void updateAttributeEvent(AttributeEvent attributeEvent) {
+        LOG.finest("Updating attribute event: " + attributeEvent);
+
+        synchronized (attributeEvents) {
+            boolean isNewer = attributeEvents.stream().filter(event -> event.getRef().equals(attributeEvent.getRef())).findFirst()
+                .map(existingEvent -> existingEvent.getTimestamp() < attributeEvent.getTimestamp()).orElse(true);
+
+            if (!isNewer) {
+                // Attribute event is older than the state already loaded
+                return;
+            }
+
+            // Get the chain of rule engines that we need to pass through
+            List<RulesEngine<?>> rulesEngines = getEnginesInScope(attributeEvent.getRealm(), attributeEvent.getPath());
+
             // Remove asset state with same attribute ref as new state, add new state
-            boolean inserted = !assetStates.remove(assetState);
-            assetStates.add(assetState);
+            boolean inserted = !attributeEvents.remove(attributeEvent);
+            attributeEvents.add(attributeEvent);
 
             // Pass through each rules engine
             for (RulesEngine<?> rulesEngine : rulesEngines) {
-                rulesEngine.updateOrInsertAssetState(assetState, inserted);
+                rulesEngine.updateOrInsertAttributeInfo(attributeEvent, inserted);
             }
         }
     }
 
-    protected void retractAssetState(AssetState<?> assetState) {
+    protected void retractAttributeEvent(AttributeEvent attributeEvent) {
         // Get the chain of rule engines that we need to pass through
-        List<RulesEngine<?>> rulesEngines = getEnginesInScope(assetState.getRealm(), assetState.getPath());
+        List<RulesEngine<?>> rulesEngines = getEnginesInScope(attributeEvent.getRealm(), attributeEvent.getPath());
 
-        synchronized (assetStates) {
+        synchronized (attributeEvents) {
             // Remove asset state with same attribute ref
-            assetStates.remove(assetState);
+            attributeEvents.remove(attributeEvent);
 
             // Pass through each rules engine
             for (RulesEngine<?> rulesEngine : rulesEngines) {
-                rulesEngine.removeAssetState(assetState);
+                rulesEngine.removeAttributeInfo(attributeEvent);
             }
         }
     }
 
-    protected List<AssetState<?>> getAssetStatesInScope(String assetId) {
-        synchronized (assetStates) {
-            return assetStates
+    protected List<AttributeInfo> getAssetStatesInScope(String assetId) {
+        synchronized (attributeEvents) {
+            return attributeEvents
                 .stream()
                 .filter(assetState -> Arrays.asList(assetState.getPath()).contains(assetId))
                 .collect(Collectors.toList());
@@ -887,10 +893,10 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
     /**
      * Called when an engine's rules change identifying assets with location attributes that also have {@link
-     * LocationAttributePredicate} in the rules. The job here is to identify the asset's (via {@link AssetState}) that
+     * LocationAttributePredicate} in the rules. The job here is to identify the asset's (via {@link AttributeInfo}) that
      * have modified {@link LocationAttributePredicate}s and to notify the {@link GeofenceAssetAdapter}s.
      */
-    protected void onEngineLocationRulesChanged(RulesEngine<?> rulesEngine, List<RulesEngine.AssetStateLocationPredicates> newEngineAssetStateLocationPredicates) {
+    protected void onEngineLocationRulesChanged(RulesEngine<?> rulesEngine, List<RulesEngine.AssetLocationPredicates> newEngineAssetStateLocationPredicates) {
 
         synchronized (assetsWithModifiedLocationPredicates) {
 
@@ -902,8 +908,7 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                         // All location predicates have been removed so record each asset state as modified
                         assetsWithModifiedLocationPredicates.addAll(
                             existingAssetStateLocationPredicates.stream().map(
-                                RulesEngine.AssetStateLocationPredicates::getAssetId).collect(
-                                Collectors.toList()));
+                                RulesEngine.AssetLocationPredicates::getAssetId).toList());
                         // Remove this engine from the map
                         return null;
                     });
@@ -916,14 +921,13 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
                             // All asset states are new so record them all as modified
                             assetsWithModifiedLocationPredicates.addAll(
                                 newEngineAssetStateLocationPredicates.stream().map(
-                                    RulesEngine.AssetStateLocationPredicates::getAssetId).collect(
-                                    Collectors.toList()));
+                                    RulesEngine.AssetLocationPredicates::getAssetId).toList());
                         } else {
                             // Find obsolete and modified asset states
                             existingEngineAssetStateLocationPredicates.forEach(
                                 existingAssetStateLocationPredicates -> {
                                     // Check if there are no longer any location predicates for this asset
-                                    Optional<RulesEngine.AssetStateLocationPredicates> newAssetStateLocationPredicates = newEngineAssetStateLocationPredicates.stream()
+                                    Optional<RulesEngine.AssetLocationPredicates> newAssetStateLocationPredicates = newEngineAssetStateLocationPredicates.stream()
                                         .filter(assetStateLocationPredicates ->
                                             assetStateLocationPredicates.getAssetId().equals(
                                                 existingAssetStateLocationPredicates.getAssetId()))
@@ -975,12 +979,12 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
             try {
                 // Find all location predicates associated with modified assets and pass through to the geofence adapters
-                List<RulesEngine.AssetStateLocationPredicates> assetLocationPredicates = new ArrayList<>(
+                List<RulesEngine.AssetLocationPredicates> assetLocationPredicates = new ArrayList<>(
                     assetsWithModifiedLocationPredicates.size());
 
                 assetsWithModifiedLocationPredicates.forEach(assetId -> {
 
-                    RulesEngine.AssetStateLocationPredicates locationPredicates = new RulesEngine.AssetStateLocationPredicates(
+                    RulesEngine.AssetLocationPredicates locationPredicates = new RulesEngine.AssetLocationPredicates(
                         assetId,
                         new HashSet<>());
 
@@ -1042,12 +1046,12 @@ public class RulesService extends RouteBuilder implements ContainerService, Asse
 
     /**
      * Trigger rules engines which have the {@link org.openremote.model.value.MetaItemDescriptor} {@link org.openremote.model.rules.Ruleset#TRIGGER_ON_PREDICTED_DATA}
-     * and contain {@link AssetState} of the specified asset id. Use this when {@link PredictedDatapoints} has changed for this asset.
+     * and contain {@link AttributeInfo} of the specified asset id. Use this when {@link PredictedDatapoints} has changed for this asset.
      * @param assetId of the asset which has new predicated data points.
      */
     public void fireDeploymentsWithPredictedDataForAsset(String assetId) {
-        List<AssetState<?>> assetStates = getAssetStatesInScope(assetId);
-        if (assetStates.size() > 0) {
+        List<AttributeInfo> assetStates = getAssetStatesInScope(assetId);
+        if (!assetStates.isEmpty()) {
             String realm = assetStates.get(0).getRealm();
             String[] assetPaths = assetStates.stream().flatMap(assetState -> Arrays.stream(assetState.getPath())).toArray(String[]::new);
             for (RulesEngine<?> rulesEngine : getEnginesInScope(realm, assetPaths)) {
