@@ -27,6 +27,7 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.info.License;
+import io.swagger.v3.oas.models.media.StringSchema;
 import io.swagger.v3.oas.models.security.*;
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.oas.models.servers.ServerVariable;
@@ -45,32 +46,37 @@ import org.openremote.container.security.IdentityService;
 import org.openremote.container.web.WebService;
 import org.openremote.model.Container;
 
-import javax.ws.rs.WebApplicationException;
+import jakarta.ws.rs.WebApplicationException;
+
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static io.undertow.util.RedirectBuilder.redirect;
-import static javax.ws.rs.core.Response.Status.NOT_FOUND;
-import static javax.ws.rs.core.UriBuilder.fromUri;
+import static jakarta.ws.rs.core.Response.Status.NOT_FOUND;
+import static jakarta.ws.rs.core.UriBuilder.fromUri;
 import static org.openremote.container.util.MapAccess.getString;
 import static org.openremote.model.Constants.REALM_PARAM_NAME;
 import static org.openremote.model.util.ValueUtil.configureObjectMapper;
 
 public class ManagerWebService extends WebService {
 
-    protected interface ServerVariableMixin {
-        @JsonProperty
-         String getDefault();
+    private static abstract class ServerVariableMixin {
+        @JsonProperty("default")
+        List<String> _default;
+    }
+
+    private static abstract class StringSchemaMixin {
+        @JsonProperty("enum")
+        protected List<String> _enum;
     }
 
     public static final int PRIORITY = LOW_PRIORITY + 100;
@@ -82,6 +88,7 @@ public class ManagerWebService extends WebService {
     public static final String OR_ROOT_REDIRECT_PATH_DEFAULT = "/manager";
     public static final String API_PATH = "/api";
     public static final String MANAGER_APP_PATH = "/manager";
+    public static final String INSIGHTS_APP_PATH = "/insights";
     public static final String SWAGGER_APP_PATH = "/swagger";
     public static final String CONSOLE_LOADER_APP_PATH = "/console_loader";
     public static final String SHARED_PATH = "/shared";
@@ -101,6 +108,7 @@ public class ManagerWebService extends WebService {
     public int getPriority() {
         return PRIORITY;
     }
+
     @Override
     public void init(Container container) throws Exception {
         super.init(container);
@@ -109,32 +117,41 @@ public class ManagerWebService extends WebService {
 
         // Modify swagger object mapper to match ours
         configureObjectMapper(Json.mapper());
+        Json.mapper().addMixIn(StringSchema.class, StringSchemaMixin.class);
         Json.mapper().addMixIn(ServerVariable.class, ServerVariableMixin.class);
 
         // Add swagger resource
         OpenAPI oas = new OpenAPI()
-            .servers(Collections.singletonList(new Server().url("/api/{realm}/").variables(new ServerVariables().addServerVariable("realm", new ServerVariable()._default("master")))))
-            .schemaRequirement("openid", new SecurityScheme().type(SecurityScheme.Type.OAUTH2).flows(
-                new OAuthFlows().authorizationCode(
-                    new OAuthFlow()
-                        .authorizationUrl("/auth/realms/master/protocol/openid-connect/auth")
-                        .refreshUrl("/auth/realms/master/protocol/openid-connect/token")
-                        .tokenUrl("/auth/realms/master/protocol/openid-connect/token"))))
-            .security(Collections.singletonList(new SecurityRequirement().addList("openid")));
+                .servers(List.of(new Server().url("/api/{realm}/").variables(new ServerVariables().addServerVariable("realm", new ServerVariable()._default("master")))))
+                .schemaRequirement("openid", new SecurityScheme().type(SecurityScheme.Type.OAUTH2).flows(
+                        new OAuthFlows() //
+                                .authorizationCode(
+                                        new OAuthFlow()
+                                                .authorizationUrl("/auth/realms/master/protocol/openid-connect/auth")
+                                                .refreshUrl("/auth/realms/master/protocol/openid-connect/token")
+                                                .tokenUrl("/auth/realms/master/protocol/openid-connect/token")
+                                                .scopes(new Scopes().addString("profile", "profile"))
+                                )
+                                .clientCredentials(
+                                        // for service users
+                                        new OAuthFlow()
+                                                .tokenUrl("/auth/realms/master/protocol/openid-connect/token")
+                                                .refreshUrl("/auth/realms/master/protocol/openid-connect/token")
+                                                .scopes(new Scopes().addString("profile", "profile"))
+                                )
+                )).security(List.of(new SecurityRequirement().addList("openid")));
 
         Info info = new Info()
-            .title("OpenRemote Manager REST API")
-            .description("This is the documentation for the OpenRemote Manager HTTP REST API.  Please see the [wiki](https://github.com/openremote/openremote/wiki) for more info.")
-            .contact(new Contact()
-                .email("info@openremote.io"))
-            .license(new License()
-                .name("AGPL 3.0")
-                .url("https://www.gnu.org/licenses/agpl-3.0.en.html"));
+                .title("OpenRemote Manager REST API")
+                .version("3.0.0")
+                .description("This is the documentation for the OpenRemote Manager HTTP REST API.  Please see the [documentation](https://docs.openremote.io) for more info.")
+                .contact(new Contact().email("info@openremote.io"))
+                .license(new License().name("AGPL 3.0").url("https://www.gnu.org/licenses/agpl-3.0.en.html"));
 
         oas.info(info);
         SwaggerConfiguration oasConfig = new SwaggerConfiguration()
-            .resourcePackages(Stream.of("org.openremote.model.*").collect(Collectors.toSet()))
-            .openAPI(oas);
+                .resourcePackages(Set.of("org.openremote.model.*"))
+                .openAPI(oas);
 
         OpenApiResource openApiResource = new OpenApiResource();
         openApiResource.openApiConfiguration(oasConfig);
@@ -212,6 +229,7 @@ public class ManagerWebService extends WebService {
             };
 
             deploymentHandler.addPrefixPath(MANAGER_APP_PATH, appFileHandler);
+            deploymentHandler.addPrefixPath(INSIGHTS_APP_PATH, appFileHandler);
             deploymentHandler.addPrefixPath(SWAGGER_APP_PATH, appFileHandler);
             deploymentHandler.addPrefixPath(CONSOLE_LOADER_APP_PATH, appFileHandler);
             deploymentHandler.addPrefixPath(SHARED_PATH, appFileHandler);
@@ -222,13 +240,13 @@ public class ManagerWebService extends WebService {
         // Redirect / to default app
         if (rootRedirectPath != null) {
             getRequestHandlers().add(
-                new RequestHandler(
-                    "Default app redirect",
-                    exchange -> exchange.getRequestPath().equals("/"),
-                    exchange -> {
-                        LOG.finest("Handling root request, redirecting client to default app");
-                        new RedirectHandler(redirect(exchange, rootRedirectPath)).handleRequest(exchange);
-                    }));
+                    new RequestHandler(
+                            "Default app redirect",
+                            exchange -> exchange.getRequestPath().equals("/"),
+                            exchange -> {
+                                LOG.finest("Handling root request, redirecting client to default app");
+                                new RedirectHandler(redirect(exchange, rootRedirectPath)).handleRequest(exchange);
+                            }));
         }
 
         if (apiHandler != null) {
@@ -308,8 +326,8 @@ public class ManagerWebService extends WebService {
     @Override
     public String toString() {
         return getClass().getSimpleName() + "{" +
-            "builtInAppDocRoot=" + builtInAppDocRoot +
-            ", customAppDocRoot=" + customAppDocRoot +
-            '}';
+                "builtInAppDocRoot=" + builtInAppDocRoot +
+                ", customAppDocRoot=" + customAppDocRoot +
+                '}';
     }
 }
